--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -1,6 +1,8 @@
 _wdt:
     resource: "@WebProfilerBundle/Resources/config/routing/wdt.xml"
     prefix:   /_wdt
+    options:
+        expose: true
 
 _profiler:
     resource: "@WebProfilerBundle/Resources/config/routing/profiler.xml"
