Fix installation issue

--- a/etc/docker/php-fpm/Dockerfile
+++ b/etc/docker/php-fpm/Dockerfile
@@ -39,5 +39,5 @@ WORKDIR /var/www
 
 ENTRYPOINT ["entrypoint.sh"]
 
-RUN apt-get install -y libxml2-dev
+RUN apt-get update && apt-get install -y libxml2-dev
 RUN docker-php-ext-install -j$(nproc) soap
