--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,8 @@
         },
         "branch-alias": {
             "dev-master": "1.10-dev"
-        }
+        },
+        "symfony-cache-warmup": true
     },
     "prefer-stable": true,
     "minimum-stability": "dev"
