Fix cache warming issue in prod env

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,3 +16,9 @@ services:
             - %kernel.root_dir%/../bin/console
             - %kernel.environment%
             - @oro_cache.oro_data_cache_manager
+
+    oro_entity_extend.entity.cache.warmer.workaround:
+        public: false
+        class: EntityAliasWorkaroundCacheWarmer
+        tags:
+            - { name: kernel.cache_warmer, priority: 25 }
